--- a/docs/source/compliance/iso27001.rst
+++ b/docs/source/compliance/iso27001.rst
@@ -1,3 +1,160 @@
-Compliance Mapping Overview
-===========================
+ISO 27001 — Practical Implementation
+==============================================
+
+Purpose
+-------
+
+This document explains how Thinkwerke interprets and implements
+**ISO 27001** for modern, cloud-native and product-centric organisations.
+
+The focus is on **making ISO 27001 executable** across platforms, pipelines,
+and operating models — not on producing documentation for its own sake.
+
+---
+
+What ISO 27001 Actually Requires
+--------------------------------
+
+ISO 27001 requires organisations to:
+
+- Establish governance and accountability
+- Identify and manage information security risks
+- Implement appropriate controls
+- Monitor effectiveness
+- Produce evidence on demand
+
+It does **not** prescribe tools, architectures, or processes.
+Those decisions must align with how the organisation actually operates.
+
+---
+
+Common Failure Patterns
+-----------------------
+
+In cloud environments, ISO 27001 initiatives often fail due to:
+
+- Controls defined only at policy level
+- Technical controls implemented inconsistently
+- No ownership model across engineering and security
+- Evidence collected manually during audits
+- Audit panic and delivery disruption
+
+Thinkwerke addresses these issues at design time.
+
+---
+
+Thinkwerke Interpretation Model
+-------------------------------
+
+ISO 27001 is implemented through four connected layers:
+
+1. Governance and ownership
+2. Technical control implementation
+3. Operational workflows
+4. Continuous evidence generation
+
+Each layer must reinforce the others.
+
+---
+
+Statement of Applicability (SoA)
+--------------------------------
+
+The SoA is treated as a **control register**, not a document.
+
+Thinkwerke ensures the SoA:
+
+- Maps controls to real systems
+- Identifies technical owners
+- References implementation locations
+- Points to live evidence sources
+
+This makes the SoA defensible and usable during audits.
+
+---
+
+Technical Control Implementation
+--------------------------------
+
+Controls are implemented across:
+
+- Cloud identity and access management
+- Network and platform configurations
+- CI/CD pipelines
+- Vulnerability and incident workflows
+- Logging and monitoring systems
+
+Where possible, controls are enforced automatically.
+
+---
+
+Evidence by Design
+------------------
+
+Evidence is generated continuously through:
+
+- Pipeline execution logs
+- Configuration states
+- Approval workflows
+- Security event handling
+- Change management records
+
+Audits become verification exercises, not discovery exercises.
+
+---
+
+Operational Integration
+-----------------------
+
+ISO 27001 controls are embedded into:
+
+- Secure software lifecycle processes
+- Vulnerability management workflows
+- Incident response procedures
+- Change and release management
+
+This prevents ISO 27001 from becoming an external compliance burden.
+
+---
+
+Audit Readiness
+---------------
+
+With this approach, organisations can:
+
+- Respond to audits without scrambling
+- Demonstrate control effectiveness live
+- Answer auditor questions with system evidence
+- Reduce audit duration and friction
+
+Audits no longer interrupt delivery.
+
+---
+
+Relationship to Other Regulations
+---------------------------------
+
+ISO 27001 forms the backbone for:
+
+- NIS2 operational controls
+- CRA product security expectations
+- Customer security assessments
+- SOC 2-style assurance
+
+This document should be read alongside:
+
+- :doc:`nis2`
+- :doc:`cra`
+- :doc:`crosswalks`
+
+---
+
+Key Takeaway
+------------
+
+ISO 27001 succeeds when it is treated as
+an **engineering and operating discipline**.
+
+When controls are implemented where work happens,
+compliance becomes sustainable, auditable, and scalable.
 
