--- a/docs/source/compliance/iso27001.rst
+++ b/docs/source/compliance/iso27001.rst
@@ -1,4 +1,4 @@
-ISO 27001 — Practical Implementation
+ISO 27001: Practical Implementation
 ==============================================
 
 Purpose
